crates/reinhardt-pages/tests/ui/form/fail/old_use_form_options.rs
use reinhardt_pages::{FormOptions, use_form};

fn main() {
	let _runtime = use_form(FormOptions::new(()));
}
