crates/reinhardt-pages/tests/ui/form/fail/old_use_form_options.stderr
error[E0432]: unresolved import `reinhardt_pages::FormOptions`
 --> tests/ui/form/fail/old_use_form_options.rs:1:23
  |
1 | use reinhardt_pages::{FormOptions, use_form};
  |                       ^^^^^^^^^^^
  |                       |
  |                       no `FormOptions` in the root
  |                       help: a similar name exists in the module: `SsrOptions`
